Fix button spacing in citation editor

--- a/static/chrome/content/skin/default/editor.css
+++ b/static/chrome/content/skin/default/editor.css
@@ -23,6 +23,11 @@ div#citation-editor-buttons {
 	text-align: right;
 }
 
+div#citation-editor-buttons > button{
+	margin-left: 5px;
+	margin-right: 5px;
+}
+
 #root {
 	flex-grow: 1;
 	display: flex;
